# armymemo

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
armymemo/: __init__.py  benchmarking.py  cli.py  comparison.py  compiler.py  corpus.py  document.py  examples.py  exceptions.py  inline.py  parser.py  review.py  review_pack.py  rules.py
armymemo/renderers/: __init__.py  typst.py
armymemo/resources/: __init__.py
armymemo/resources/examples/: __init__.py  additional_duty_appointment.Amd  basic_mfr.Amd  basic_mfr_w_table.Amd  cq_sop.Amd  leave_pass_policy.Amd  lost_cac_card.Amd  memo_for.Amd  memo_thru.Amd
armymemo/resources/rules/: memo_rulebook.yaml
armymemo/resources/typst/: armymemo.typ  backmatter.typ  body.typ  config.typ  frontmatter.typ  primitives.typ
docs/: armymemo_library_design.md  armymemo_rule_inventory.md
resources/examples/: cif_turn_in.Amd  long_memo.Amd  memo_extra_features.Amd  memo_multi_for.Amd  tutorial.Amd
tests/armymemo/: test_armymemo_benchmarking.py  test_armymemo_compiler.py  test_armymemo_examples_and_api.py  test_armymemo_parser.py  test_armymemo_rendering.py  test_armymemo_review.py  test_armymemo_review_pack.py  test_armymemo_rules.py
